# loan_prediction

./: .gitignore  README.md  loan.ipynb  loan_lab.ipynb  loan_model.ipynb  loan_optimized.ipynb  pyproject.toml
